Revert "Temporary disable csrf protection"
This reverts commit 8d1e1958948abd989517087e5ed907aa5c68f6d4.

--- a/web/views/partials/head.hbs
+++ b/web/views/partials/head.hbs
@@ -2,6 +2,7 @@
 <meta charset="UTF-8" />
 <meta name="description" content="US stocks short volume, short volume ratio, short exempt volume." />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="csrf-token" content="{{csrf}}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="yandex-verification" content="1cab4cdc34b37061" />
 <!-- Yandex.Metrika counter -->
